--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 
     <br><br>
     <button class="btn solve" ng-click="solve()">Solve</button>
-    <button class="btn reset">Reset</button>
+    <button class="btn solve" ng-click="next()">Next</button>
+    <button class="btn reset" ng-click="reset()">Reset</button>
+    <button class="btn reset" ng-click="test()">Test</button>
 
     <script src="js/angular.js"></script>
     <script src="js/block.js"></script>
